<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/background_darker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/buy_me_a_coffee"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/progress_settings_feedback_dialog"
            android:visibility="gone"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/donate_programmer_of_this_app_to_improve_app_and_add_more_features"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/donate_us_money"
            android:layout_gravity="center_vertical"
            android:tint="@color/white"/>

        <EditText
            android:id="@+id/text_settings_donate_dialog_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/how_match_to_pay"
            android:textColorHint="@color/gray_middle"
            android:layout_margin="10dp"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_settings_donate_dialog_coffee_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/coffee"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_settings_donate_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_settings_donate_dialog_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>