<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/search_friends"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/text_home_friend_search_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whats_is_he_she_name"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp">

        <ListView
            android:id="@+id/list_home_friend_search_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/text_home_friend_search_dialog_nothing_to_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/there_is_nothing_to_show" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_home_friend_search_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>